--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
+    "@types/node": "^22.10.5",
     "@vitejs/plugin-vue": "^5.1.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
