--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "pinia": "^2.3.0",
     "vue": "^3.4.38",
-    "vue3-markdown-it": "^1.0.10"
+    "vue3-markdown-it": "^1.0.10",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
