--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "pinia": "^2.3.0",
     "vue": "^3.4.38",
+    "vue-router": "^4.5.0",
     "vue-toast-notification": "^3.1.3",
     "vue3-markdown-it": "^1.0.10",
     "vue3-toastify": "^0.2.8"
