--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -24,8 +24,10 @@ env:
   APP_LOCATION: "/" # location of your client code
   APP_ARTIFACT_LOCATION: "dist" # location of client code build output
   AZURE_STATIC_WEB_APPS_API_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} # secret containing deployment token for your static web app
-  VITE_API_URL: ${{ secrets.VITE_API_URL }} # secret containing deployment token for your static web app
-  VITE_API_CODE: ${{ secrets.VITE_API_CODE }} # secret containing deployment token for your static web app
+  VITE_API_URL: ${{ secrets.VITE_API_URL }} # 
+  VITE_AUTH0_DOMAIN: ${{ secrets.VITE_AUTH0_DOMAIN }} # 
+  VITE_AUTH0_CLIENT_ID: ${{ secrets.VITE_AUTH0_CLIENT_ID }} # 
+  VITE_AUTH0_AUDIENCE: ${{ secrets.VITE_AUTH0_AUDIENCE }} # 
 
 permissions:
   contents: read
