--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^2.3.3",
     "pinia": "^2.3.0",
     "vue": "^3.4.38",
     "vue-router": "^4.5.0",
