--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.3.3",
+    "md-editor-v3": "^5.2.1",
     "pinia": "^2.3.0",
     "vue": "^3.4.38",
     "vue-router": "^4.5.0",
     "vue-toast-notification": "^3.1.3",
-    "vue3-markdown-it": "^1.0.10",
     "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
