--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.3.3",
+    "floating-vue": "^5.2.2",
     "md-editor-v3": "^5.2.1",
     "pinia": "^2.3.0",
     "vue": "^3.4.38",
